# OpenRLHF

./: README.md  pyproject.toml
examples/scripts/: train_dapo_ray_hybrid_engine.sh
openrlhf/cli/: train_ppo_ray.py
